--- a/GUI/XIB files/Base.lproj/MyDocument.xib
+++ b/GUI/XIB files/Base.lproj/MyDocument.xib
@@ -31,7 +31,7 @@
             <rect key="contentRect" x="0.0" y="0.0" width="800" height="640"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1496" height="933"/>
             <value key="minSize" type="size" width="402" height="323"/>
-            <view key="contentView" id="6">
+            <view key="contentView" misplaced="YES" id="6">
                 <rect key="frame" x="0.0" y="0.0" width="800" height="630"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
@@ -241,7 +241,7 @@
                         <popUpButton key="view" tag="11" id="4MP-rV-xX2" userLabel="Port 2">
                             <rect key="frame" x="0.0" y="14" width="45" height="20"/>
                             <autoresizingMask key="autoresizingMask"/>
-                            <popUpButtonCell key="cell" type="roundTextured" title="None" bezelStyle="texturedRounded" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" tag="-1" imageScaling="proportionallyDown" inset="2" autoenablesItems="NO" selectedItem="xyt-eC-0im" id="skK-6M-sib" userLabel="PopupButtonCell">
+                            <popUpButtonCell key="cell" type="roundTextured" title="None" bezelStyle="texturedRounded" image="devNoneTemplate" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" tag="-1" imageScaling="proportionallyDown" inset="2" autoenablesItems="NO" selectedItem="xyt-eC-0im" id="skK-6M-sib" userLabel="PopupButtonCell">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="message"/>
                                 <menu key="menu" autoenablesItems="NO" id="L3K-on-eyR">
@@ -301,10 +301,10 @@
                             </connections>
                         </segmentedControl>
                     </toolbarItem>
-                    <toolbarItem implicitItemIdentifier="C7A4F9D8-7285-41D4-A12F-6E9420DD05C3" label="Switches" paletteLabel="Switches" image="switch.2" catalog="system" sizingBehavior="auto" id="7tu-2g-yoJ">
+                    <toolbarItem implicitItemIdentifier="C7A4F9D8-7285-41D4-A12F-6E9420DD05C3" label="Deprecated" paletteLabel="Deprecated" image="switch.2" catalog="system" sizingBehavior="auto" id="7tu-2g-yoJ">
                         <nil key="toolTip"/>
                         <comboButton key="view" verticalHuggingPriority="750" baseWritingDirection="leftToRight" alignment="center" title="" image="switch.2" catalog="system" imageScaling="proportionallyDown" style="unified" id="Sfw-s7-yG9">
-                            <rect key="frame" x="12" y="14" width="32" height="24"/>
+                            <rect key="frame" x="19" y="14" width="32" height="24"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <menu key="menu" id="J7U-c8-M3j">
                                 <items>
@@ -317,6 +317,20 @@
                             </menu>
                         </comboButton>
                     </toolbarItem>
+                    <toolbarItem implicitItemIdentifier="2357009F-BB1D-438C-B918-F8C16D963BE2" label="Switches" paletteLabel="Switches" image="slider.vertical.3" catalog="system" title="Button" sizingBehavior="auto" id="6ce-og-q60">
+                        <nil key="toolTip"/>
+                        <button key="view" verticalHuggingPriority="750" id="Qop-Wt-x2l">
+                            <rect key="frame" x="12" y="14" width="32" height="20"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="roundRect" title="Button" bezelStyle="roundedRect" image="slider.vertical.3" catalog="system" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="qQF-fe-sMj">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="cellTitle"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="slidersAction:" target="1845" id="CfI-Rp-AUp"/>
+                            </connections>
+                        </button>
+                    </toolbarItem>
                 </allowedToolbarItems>
                 <defaultToolbarItems>
                     <toolbarItem reference="GsP-C7-APh"/>
@@ -326,7 +340,7 @@
                     <toolbarItem reference="kR6-IR-lNs"/>
                     <toolbarItem reference="Klt-YL-0mv"/>
                     <toolbarItem reference="1851"/>
-                    <toolbarItem reference="7tu-2g-yoJ"/>
+                    <toolbarItem reference="6ce-og-q60"/>
                     <toolbarItem reference="1851"/>
                     <toolbarItem reference="E7X-uf-vpw"/>
                     <toolbarItem reference="1851"/>
@@ -342,7 +356,7 @@
                     <outlet property="parent" destination="-2" id="T9L-Bq-Pny"/>
                     <outlet property="preferencesItem" destination="E7X-uf-vpw" id="fE2-se-OKZ"/>
                     <outlet property="screenshotSegCtrl" destination="qPe-qh-6UI" id="m5u-9x-Vto"/>
-                    <outlet property="slidersItem" destination="7tu-2g-yoJ" id="r8D-Q8-SsL"/>
+                    <outlet property="slidersItem" destination="6ce-og-q60" id="wgO-fL-8WL"/>
                     <outlet property="snapshotSegCtrl" destination="AHD-MB-nXC" id="FJe-yy-eIY"/>
                 </connections>
             </toolbar>
@@ -377,6 +391,7 @@
         <image name="prefTemplate" width="36" height="36"/>
         <image name="pushTemplate" width="36" height="36"/>
         <image name="resetTemplate" width="36" height="36"/>
+        <image name="slider.vertical.3" catalog="system" width="15" height="14"/>
         <image name="srvConnectTemplate" width="48" height="49"/>
         <image name="switch.2" catalog="system" width="16" height="14"/>
         <image name="timeMachineTemplate" width="36" height="36"/>
